--- a/source/_includes/asides/categories_sidebar.html
+++ b/source/_includes/asides/categories_sidebar.html
@@ -2,6 +2,7 @@
 <section>
 <h1>Categories</h1>
 <ul>
+  <li><a href='/blog/categories/algorithm'>Algorithm (1)</a></li>
 </ul>
 </section>
 {% endif %}
