--- a/source/_includes/asides/categories_tag.html
+++ b/source/_includes/asides/categories_tag.html
@@ -1,6 +1,6 @@
 {% if site.category_tag_cloud %}
 <section>
 <h1>Categories</h1>
-<span class='categories_tag'></span>
+<span class='categories_tag'> <a href='/blog/categories/algorithm' style='font-size: 160.0%'>Algorithm(1)</a> </span>
 </section>
 {% endif %}
